# transformer

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: cli.rs  data.rs  evaluate.rs  lib.rs  main.rs  model.rs  plot.rs
src/tests/: data_tests.rs  mod.rs  model_tests.rs
